Update images positioning in slider, fix layout issues and add simple slide animation

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,9 @@
 
 .slider-content {
     width: 100%;
+    height: 100%;
     align-self: center;
+    overflow: hidden;
 }
 
 .slider-content img {
@@ -31,4 +33,5 @@
     max-width: 100%;
     height: 400px;
     margin: 0 auto;
+    transition: left 500ms ease;
 }
